# pi_mcp2515

./: BACKGROUND_IMAGE_SETUP.md  CMakeLists.txt  DEPLOY_GUIDE.md  ESP32_CORE_3_3_0_FIX.md  ESP_NOW_DEBUG_CHECKLIST.md  ESP_NOW_FIXES_SUMMARY.md  ESP_NOW_TROUBLESHOOTING.md  INSTALLATION_SUMMARY.md  PRESSURE_SENSOR_SETUP.md  QUICKSTART.md  README.md  SMOOTH_FONTS_README.md  SPI_Scanner.ino  config.json  config.preconfigured_esp32.json  config.preconfigured_mcp2515.json  convert_your_image.py  deploy_to_pi.sh  esp32_can_obd.ino  esp32_coordinator.ino  esp32_methanol_sensors.ino  esp32_wmi_display.ino  esp32c6_can_mqtt_publisher.ino  esp_now_test_receiver.ino  esp_now_test_transmitter.ino  flash_esp32.bat  flash_esp32.sh  flash_instructions.md  get_mac_address.ino  main.py  mqtt_can_logger.py  platformio.ini  prepare_flash_package.sh  pressure_display.ino  pressure_display_receiver.ino  pressure_display_receiver_fixed.ino  pressure_sensor_transmitter.ino  pressure_sensor_transmitter_fixed.ino  requirements.txt  sdkconfig  (+2 more)
.devcontainer/: Dockerfile
components/lv_porting/: CMakeLists.txt
core/: benchmark.py  can_diagnostics.py  config.py  datalogger.py  fuel_calculations.py  imperial_units.py  network_manager.py  network_scanner.py  pid_handler.py  sensor_discovery.py  service_manager.py  webapp.py  wireless_obd_adapter.py
data/: README.md
flash_package/: README.md  flash_local.bat  flash_local.sh  flash_via_pi.sh
include/: lv_conf.h
logs/: 2025-09-29_15-09-04_datalog.csv  2025-09-29_15-09-39_datalog.csv
main/: main.c
scripts/: README.md  boot_init.sh  (+19 more)
(+39 files in other folders)
